# api/docs/swagger.json
@@ -81,7 +81,7 @@
                     "201": {
                         "description": "GetBookBody",
                         "schema": {
-                            "$ref": "#/definitions/models.CreateBook"
+                            "$ref": "#/definitions/models.Book"
                         }
                     },
                     "400": {
@@ -222,6 +222,100 @@
                         "description": "GetBookBody",
                         "schema": {
                             "$ref": "#/definitions/models.Book"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Argument",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "Create Login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Create Login",
+                "operationId": "login",
+                "parameters": [
+                    {
+                        "description": "LoginRequestBody",
+                        "name": "Login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "GetLoginBody",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Argument",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/loginsuper": {
+            "post": {
+                "description": "Create LoginSuper",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "LoginSuper"
+                ],
+                "summary": "Create LoginSuper",
+                "operationId": "loginsuper",
+                "parameters": [
+                    {
+                        "description": "LoginSuperRequestBody",
+                        "name": "LoginSuper",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "GetLoginSuperBody",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginResponse"
                         }
                     },
                     "400": {
@@ -549,7 +643,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "GetUserrBody",
+                        "description": "GetUserBody",
                         "schema": {
                             "$ref": "#/definitions/models.User"
                         }
@@ -636,7 +730,7 @@
                     },
                     {
                         "description": "CreateUserRequestBody",
-                        "name": "actor",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -768,13 +862,16 @@
         "models.CreateUser": {
             "type": "object",
             "properties": {
-                "balance": {
-                    "type": "string"
-                },
                 "first_name": {
                     "type": "string"
                 },
                 "last_name": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 },
                 "phone_number": {
@@ -821,6 +918,25 @@
                     "items": {
                         "$ref": "#/definitions/models.User"
                     }
+                }
+            }
+        },
+        "models.Login": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
                 }
             }
         },
@@ -881,19 +997,22 @@
         "models.UpdateUser": {
             "type": "object",
             "properties": {
-                "balance": {
+                "first_name": {
                     "type": "string"
                 },
-                "first_name": {
+                "id": {
                     "type": "string"
                 },
                 "last_name": {
                     "type": "string"
                 },
-                "phone_number": {
+                "login": {
                     "type": "string"
                 },
-                "user_id": {
+                "password": {
+                    "type": "string"
+                },
+                "phone_number": {
                     "type": "string"
                 }
             }
@@ -901,25 +1020,28 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "balance": {
-                    "type": "string"
-                },
                 "created_at": {
                     "type": "string"
                 },
                 "first_name": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
                 "last_name": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 },
                 "phone_number": {
                     "type": "string"
                 },
                 "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
