# models/user.go
@@ -1,32 +1,36 @@
 package models
 
 type UserPrimarKey struct {
-	Id string `json:"user_id"`
+	Id    string `json:"user_id"`
+	Login string `json:"login"`
 }
 
 type CreateUser struct {
 	FirstName   string `json:"first_name"`
 	LastName    string `json:"last_name"`
+	Login       string `json:"login"`
+	Password    string `json:"password"`
 	PhoneNumber string `json:"phone_number"`
-	Balance     string `json:"balance"`
 }
 
 type User struct {
-	Id          string `json:"user_id"`
+	Id          string `json:"id"`
 	FirstName   string `json:"first_name"`
 	LastName    string `json:"last_name"`
+	Login       string `json:"login"`
+	Password    string `json:"password"`
 	PhoneNumber string `json:"phone_number"`
-	Balance     string `json:"balance"`
 	CreatedAt   string `json:"created_at"`
 	UpdatedAt   string `json:"updated_at"`
 }
 
 type UpdateUser struct {
-	Id          string `json:"user_id"`
+	Id          string `json:"id"`
 	FirstName   string `json:"first_name"`
 	LastName    string `json:"last_name"`
+	Login       string `json:"login"`
+	Password    string `json:"password"`
 	PhoneNumber string `json:"phone_number"`
-	Balance     string `json:"balance"`
 }
 
 type GetListUserRequest struct {
